--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
     ports:
       - "3000:80"
   database:
-    image: postgres
+    image: postgres:14-bullseye
     volumes:
       - ./database/data:/var/lib/postgresql/data
       - ./database/setup:/docker-entrypoint-initdb.d
@@ -93,3 +93,15 @@ services:
       - POSTGRES_PASSWORD=test-databases
     ports:
       - 15432:5432
+  react-attendees:
+    image: node:latest
+    command: npm start
+    working_dir: /app
+    volumes:
+      - ./ghi/attendees:/app
+    environment:
+      - HOST=0.0.0.0
+      - PORT=3001
+      - NODE_ENV=development
+    ports:
+      - "3001:3001"
